*Empty MediaWiki Message*

--- a/ბუქარესტი.mw
+++ b/ბუქარესტი.mw
@@ -11,7 +11,7 @@
 | '''[[ფართობი]]'''<br/>&nbsp;• ქალაქი<br />&nbsp;• აგლომერაცია<br/>
 | <br/>228 [[კმ²]]<br/>1,521 [[კვ²]]
 |- 
-| '''[[ეკონომიკა]]'''<br/>&nbsp;• [[ეშპ]] [[პერ კაპიტა]] (2005)<br/>&nbsp;• ბიუჯეტი (2005)
+| '''[[ეკონომიკა]]'''<br/>&nbsp;• [[ეშპ]] [[პერ კაპიტა|პკ]] (2005)<br/>&nbsp;• ბიუჯეტი (2005)
 | <br/> $20,057 ([[მსყიდველობით უნარიანობაზე გაანგარიშებით|მუგ]])<br/>$640 მლნ
 |- 
 | '''[[მოსახლეობა]]'''<br/>&nbsp;• საერთო (2003)<br/>&nbsp;• [[სიმჭიდროვე]]
@@ -24,8 +24,7 @@
 | [[GMT]]+2
 |- 
 | '''[[გეოგრაფიული კოორდინატები|კოორდ.]]'''
-| 
-|44°25′N 26°06′E
+| 44°25′N 26°06′E
 |}
 
 
@@ -72,7 +71,6 @@
 [[mo:Букурешть]]
 [[nl:Boekarest]]
 [[ja:ブカレスト]]
-[[ka:ბუქარესტი]]
 [[no:Bucuresti]]
 [[pl:Bukareszt]]
 [[pt:Bucareste]]
