*Empty MediaWiki Message*

--- a/რენე_პრევალი.mw
+++ b/რენე_პრევალი.mw
@@ -1,4 +1,4 @@
-[[სურათი:Preval.gif|thumb|რენე პრევალი]] '''რენე გარსია პრევალი''' (*[[17 იანვარი]], [[1943]], [[პორტ-ო-პრენსი]]) [[ჰაიტი|ჰაიტის]] ამჟამინდელი არჩეული პრეზიდენტია. მანამდე ის პრეზიდენტი იყო 1996 წლის 7 თებერვლიდან 2001 წლის 7 თებერვლამდე.
+[[სურათი:Rene Preval.jpg|thumb|რენე პრევალი]] '''რენე გარსია პრევალი''' (*[[17 იანვარი]], [[1943]], [[პორტ-ო-პრენსი]]) [[ჰაიტი|ჰაიტის]] ამჟამინდელი არჩეული პრეზიდენტია. მანამდე ის პრეზიდენტი იყო 1996 წლის 7 თებერვლიდან 2001 წლის 7 თებერვლამდე.
 
 პრევალი განათლებით აგრონომია და დიპლომი მიღებული აქვს გემბლუქსის კოლეჯში, [[ბელგია|ბელგიასი]]. [[1963]] წელს ის იძულებული იყო ჰაიტი დაეტოვებინა ოჯახითურთ მაშინდელი მმართველი დიქტატორის [[დუვალიე, ფრანსუა|ფრანსუა დუვალიეს]], აცრ "პაპა დოკი", დევნის გამო. [[ბრუკლინი|ბრუკლინში]], [[ნიუ-იორკი]], ხუთი წლის გატარების შემდეგ ის ჰაიტიზე ბრუნდება და მინერაული რესურსების ეროვნულ ინსტიტუტში იწყებს მუშაობას.
 
