დაემატა ინგ.ბმული

--- a/ფერნანდო_მაგელანი.mw
+++ b/ფერნანდო_მაგელანი.mw
@@ -16,6 +16,7 @@
 [[cs:Fernão de Magalhães]]
 [[da:Ferdinand Magellan]]
 [[de:Ferdinand Magellan]]
+[[en:Ferdinand Magellan]]
 [[es:Fernando de Magallanes]]
 [[eo:Fernão de MAGALHÃES]]
 [[eu:Fernão de Magalhães]]
