--- a/ნინოწმინდა_(მრავალმნიშვნელოვანი).mw
+++ b/ნინოწმინდა_(მრავალმნიშვნელოვანი).mw
@@ -1,1 +1,10 @@
-#REDIRECT [[ნინოწმინდა (ქალაქი)]]
+საკუთარი სახელი  '''ნინოწმინდა''' შეიძლება აღნიშნავდეს:
+
+
+* [[ნინოწმინდა (ნინოწმინდის რაიონი)| ნინოწმინდა]] - ქალაქი  ნინოწმინდის რაიონში
+*[[ნინოწმინდა (საგარეჯოს რაიონო)| ნინოწმინდა]] - სოფელი  საგარეჯოს რაიონში
+* [[ნინოწმინდა (ძეგლი)| ნინოწმინდა]] - ტაძარი საგარეჯოს რაიონში
+
+
+
+{{მრავალმნიშვნელოვანი}}
