*Empty MediaWiki Message*

--- a/მცხეთის_ჯვრის_მონასტერი.mw
+++ b/მცხეთის_ჯვრის_მონასტერი.mw
@@ -7,7 +7,13 @@
 
 ტაძრის სახელწოდებას ისტორიული საფუძველი აქვს. ქტისტიანობის მიღების პირველი წლებიდანვე ამ ადგილას მეფე [[მირიან III|მირიან III-მ]] ხის მაღალი ჯვარი აღმართა, რომელსაც გარდა ქართველებისა ტაყვანს სცემდნენ კავკასიია სხვა ქრიატიანი ერებიც. VI საუკუნის II ნახევარში ამ ჯვრის არსებობას ადასტურებს "ევსტათი მცხეთელის ცხოვრებას". VII საუკუნის II ნახევარში (545-სა და 586 შორის) ქართლის ერისმთავარმა [[გუარამი|გუარამმა]] ჯვრის გვერდით პატარა ეკლესია ააშენა (დგას საგანგებო სუბსტრუქციაზე, რომელშიც სამარხია). გარედან იგი ორფერდასახურავიანი მარტივი სწორკუთხა ნაგებობაა, შიგნით ჯვრისებრი მოხაზულობა აქვს (1 აფსიდითა და 3 სწორკუთხა მკლავით). შუაში კვადრატია, რომელსაც გუმბათისებრი გადახურვა ჰქონია (მხოლოდ ყელის გარეშე). ამ პატარა სამლოცველოს დღეს ჯვრის მცირე ტაძარს ანუ "მცირე ჯვარს" უწოდებენ. იმავე VI საუკუნის მიწურულსა და VII საუკუნის დასაწყისში (586/587-604/605) გუარამის ძემ - ერისმთავარმა [[სტეფანოზ I|სტეფანოზ I-მა]] მცირე ტაძრის გვერდით ააგო დიდი ტაძარი, რომელსაც ზედ გადაეხურა ხის ჯვარს (ჯვრის კვარცხლბეკი დღემდეა დარჩენილი ეკლესიაში). ჯვრის მცირე და დიდი ტაძრების აგების დროს თვით ძეგლთა ანალიზის საფუძველზე დაადგინა გ. ჩუბინაშვილმა. საუკუნეთა მანძილზე მცირე ტაძარი ძლიერ დაზიანდა, დიდმა ტაძარმა კი კარგად მოაღწია დღემდე.
 
-ჯვრის უშუალო წინამორბედია [[ნინოწმინდის ტაძარი]]. ჯვარში განვითარებულია და მხატვრულად სრულყოფილია ნინოწმინდის კომპოზიცია. გეგმის საფუძველს აქაც კუთხისოთახებიანი ტეტრაკონქი შეადგენს, მაგრამ ეს კუთხის ოთახები რადიალურად კი არ არის განლაგებული, როგორც ნინოწმინდაში, არამედ აფსიდების ღერძების პარალელურად და გუმბათქვეშა სივრცესთან დაკავშირებულია კუთხის ღრმა ნიშებით, რომელთაც წრის 3/4-ის მოხაზულობა აქვთ. შენობის ბირთვს, ჩვეულებისამებრ, შეადგენს კვადრატი, რომლის თავზეც აღმართულია 8-წახნაგოვან ყელზე დამყარებული გუმბათი. იგი მთალი შიგა სივრცის დომინანტია, განსაზღვრავს ყველა სხვა ნაწილის ფორმასა და პროპორციებს ამ ზუროთმოძღვრულ სივრცეში, რომელიც ხიბლავს ადამიანის ნაწილთა სრული წონასწორობითა და პროპორციათა ჰარმონიით. 
+ჯვრის უშუალო წინამორბედია [[ნინოწმინდა (ძეგლი)|ნინოწმინდის ტაძარი]]. ჯვარში განვითარებულია და მხატვრულად სრულყოფილია ნინოწმინდის კომპოზიცია. გეგმის საფუძველს აქაც კუთხისოთახებიანი ტეტრაკონქი შეადგენს, მაგრამ ეს კუთხის ოთახები რადიალურად კი არ არის განლაგებული, როგორც ნინოწმინდაში, არამედ აფსიდების ღერძების პარალელურად და გუმბათქვეშა სივრცესთან დაკავშირებულია კუთხის ღრმა ნიშებით, რომელთაც წრის 3/4-ის მოხაზულობა აქვთ. შენობის ბირთვს, ჩვეულებისამებრ, შეადგენს კვადრატი, რომლის თავზეც აღმართულია 8-წახნაგოვან ყელზე დამყარებული გუმბათი. იგი მთალი შიგა სივრცის დომინანტია, განსაზღვრავს ყველა სხვა ნაწილის ფორმასა და პროპორციებს ამ ზუროთმოძღვრულ სივრცეში, რომელიც ხიბლავს ადამიანის ნაწილთა სრული წონასწორობითა და პროპორციათა ჰარმონიით. 
+
+ჯვრის გარეგნული სახე ნათლად ასახავს სივრცის შიგა დანაწევრებას. აქ გვაქვს შიგა და გარე ფორმების მხატვრულად გააზრებული შესაბამისობა. ეს პირველი მაგალითია შუა საუკუნეების ქართულ ხუროთმოძღვრებაში, როცა ფასადის სახე დამოუკიდებელი, შეგნებულად დასახული მხატვრული ამოცანის მნიშვნელობას იძენს. ამიერიდან ეს ქართული არქიტექტურის დამახასიათებელი ნიშანი იქნება ერთი იმ მარავალ ნიშანთაგანი, რომლებიც მკვეთრად განსხვავებენ მას ბიზანტიურისაგან (ბიზანტიაში ხუროთმოძღვართა ყურადღებას მთლიანად იპყრობდა დიდებული შიგა სივრცის შექმნის ამოცანა, ფასადები მათ არ აინტერესებდათ). მიუხედავად იმისა, რომ შენობა დიდი არ არის (სიმაღე 25 მ არ აღემატება), იგი მონუმენტურ შთაბეჭდილებას ტოვებს. ფასადთა დამუშავებაში სრული კანონზომირებაა.
+
+ჯვრის ტაძარი [[ბოლნისის სიონი|ბოლნისის სიონის]] შემდეგ ხუროთმოძღვრების სკულპტურული მორთვის ახალ საფეხურს წარმოადგენს. ფიგურული რელიეფების განლაგება ღრმად გააზრებულ სისტემას ექვემდებარება. დასავლეთი ფასადი, რომელიც ზედ ქარაფის პირასაა დაკიდებული და შორიდა ჩანს, მარტივად და ზოგადად არის დამუშავებული. აქ მთავარი ფასადები აღმოსავლეთ და სამხრეთისაა. აღმოსავლეთ ფასადზე საკურთხევლის აფსიდს 3 სარკმელი აქვს, რომლებიც შეკრულია მათ ტავზე გავლებული დეკორატიული, რელიეფური სარტყლით. სარტყლის ზემოთ, სარკმლების შესაბამისად, მოთავსებულია 3 რელიეფური გამოსახულება იმ პირებისა, რომელთა თაოსნობათა და ხარჯიტაც აშენდა ეკლესია: შუაში ქრისტეს წინაშე მუხლმოდრეკილი სტეფანოზ ერისმთავარია, ე.ი. მთავარი მშენებელი; მარცხნივ - მისი ძმა დემეტრე მფარველი ანგელოზთურთ, მარჯვნივ - სტეფანოზის მემკვიდრე ადარნასე (მის ზემოტაც ფრთაგაშლილი ანგელოზია, რომელსაც ხარჯვენა ხელი წინა აქვს გაწვდილი); ადარნასეს წინაა მუხლმოდრეკილი ბავშვი - მისი ძე. სამივე რელიეფზე ასოთმტავრული წარწერებია, რომლებშიც მშენებელტა სახელები და ტიტულებია მოხსენიებული ([[ჯვრის წარწერები]])
+
+
 
 
 VII ლეგენდის თანახმად ამ მიდამოებში მოაქცია წმინდა ნინომ ქვეყანა ქრისტიანობაზე და მცხეთის ყველაზე მაღალ გორაზე ხის ჯვარი აღმართა. პირველი შედარებით მცირე ტაძარი ამ ადგილზე დაახ. [[545]] წელს აიგო და ერქვა ''ჯვრის მცირე ეკლესია''. მეორე, უფრო დიდი ტაძარი, სახელად ''ჯვრის დიდი ეკლესია'', მცირეს გვერდზე აშენდა დაახ. 586-605 წლებში. დიდი ეკლესია ტერტრაკონის (?ტერმინი შესამოწმებელია) არქიტექტურულ სტილშია ნაგები, რომელიც პოპულარული იყო არა მხოლოდ საქართველოში, არამედ მთელ სამხრეთ კავკასიაში. შემდგომში ის მოდელი გახდა მრავალი სხვა ეკლესიისთვის (იხ. [[ახალი ათონის მონასტერი]]. მის ფასადს ამშვენებს იმ დროისთვის უცხო ერთმანეთისგან განსხვავებული რელიეფური სკულპტურები. ჯვრის კომპლექსის მნიშვნელობა გვიანდელ საუკუნეებში უფრო გაიზარდა და რეგიონის ქრისტიანთა უმთავრესი მოსალოცი ადგილი გახდა. ჯვრის ეკლესია ამჟამადაც ქრისტიანული და საერო დღესასწაულების ერთ-ერთი უმთავრესი ადგილია. წმინდა ნინოს ჯვრის ფრაგმენტის ხილვა დღესაც შესაძლებელია.
