*Empty MediaWiki Message*

--- a/აიკიდო.mw
+++ b/აიკიდო.mw
@@ -1,33 +1,2 @@
-,,აიკიდო მშვიდობას ოუანს მსოფლიოს"-[[მორიჰეი უეშიბა]].
-
-[[ar:أيكيدو]]
-[[bg:Айкидо]]
-[[ca:Aikido]]
-[[cs:Aikido]]
-[[da:Aikido]]
-[[de:Aikidō]]
-[[en:Aikido]]
-[[eo:Aikido]]
-[[es:Aikido]]
-[[fi:Aikido]]
-[[fr:Aïkido]]
-[[gl:Aikido]]
-[[he:אייקידו]]
-[[hr:Aikido]]
-[[hu:Aikido]]
-[[id:Aikido]]
-[[it:Aikidō]]
-[[ja:合気道]]
-[[lt:Aikido]]
-[[mk:Аикидо]]
-[[ms:Aikido]]
-[[nl:Aikido]]
-[[no:Aikido]]
-[[pl:Aikido]]
-[[pt:Aikido]]
-[[ro:Aikido]]
-[[ru:Айкидо]]
-[[sk:Aikido]]
-[[sl:Aikido]]
-[[sr:Аикидо]]
-[[sv:Aikido]]
+,,აიკიდო მშვიდობას მოუტანს მსოფლიოს"-[[მორიჰეი უეშიბა]].
+აიკიდო არის [[იაპონური]] საბრძოლო ხელოვნება. "აიკიდო" იაპონურად ნიშნავს "ჰარმონიისა და სიყვარულის გზას".
