*Empty MediaWiki Message*

--- a/კატანა.mw
+++ b/კატანა.mw
@@ -1,3 +1,1 @@
-კატანა არის იაპონური დიდი, ორხელიანი ხმალი.
-
-{{უვარგისი}}
+კატანა არის იაპონური დიდი ხმალ, რომელსაც ძირითადად [[სამურაები]] ხმარობდნენ. რიგითი მოქალაქისთვის კატანა ჩვეულებრივ მიუწვდომელი იყო თავისი სიძვირისა გამო.[[სურათი:Katana.jpg]]
