--- a/აიკიდო.mw
+++ b/აიკიდო.mw
@@ -1,3 +1,3 @@
 ,,აიკიდო მშვიდობას მოუტანს მსოფლიოს"-[[მორიჰეი უეშიბა]].
 აიკიდო არის [[იაპონური]] საბრძოლო ხელოვნება. "აიკიდო" იაპონურად ნიშნავს "ჰარმონიისა და სიყვარულის გზას".
-[[სურათი:Example.jpg]]
+[[სურათი:Aikido1.jpg]]
