--- a/აიკიდო.mw
+++ b/აიკიდო.mw
@@ -1,4 +1,4 @@
 ,,აიკიდო მშვიდობას მოუტანს მსოფლიოს"-[[მორიჰეი უეშიბა]].
 აიკიდო არის [[იაპონური]] საბრძოლო ხელოვნება. "აიკიდო" იაპონურად ნიშნავს "ჰარმონიისა და სიყვარულის გზას".
 [[სურათი:Aikido1.jpg]]
-[[სურათი:Aikido.jpg]]
+[[სურათი:Aikido2.jpg]]
