--- a/რაზმაძე.mw
+++ b/რაზმაძე.mw
@@ -1,4 +1,3 @@
-
 {{მრავალმნიშვნელოვანი}}
 
 საკუთარი სახელი '''რაზმაძე''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
@@ -10,3 +9,4 @@
 * [[რაზმაძე, რომანოზ]] - მესტამბე, გამომცემელი
 * [[რაზმაძე, სოლომონ]] - პოეტი, მთარგმნელი
 * [[რაზმაძე, შოთა]] - სპეციალისტი ელექტრონიკის დარგში
+* [[რაზმაძე, ნიკოლოზ]] - ვიკიპედიის განმავრცობელი
