--- a/კატანა.mw
+++ b/კატანა.mw
@@ -1,1 +1,5 @@
-კატანა არის იაპონური დიდი ხმალ, რომელსაც ძირითადად [[სამურაები]] ხმარობდნენ. რიგითი მოქალაქისთვის კატანა ჩვეულებრივ მიუწვდომელი იყო თავისი სიძვირისა გამო.[[სურათი:Katana.jpg]]
+[[სურათი:Katana.jpg|thumb]]
+'''კატანა''' არის იაპონური დიდი ხმალ, რომელსაც ძირითადად [[სამურაები]] ხმარობდნენ. რიგითი მოქალაქისთვის კატანა ჩვეულებრივ მიუწვდომელი იყო თავისი სიძვირისა გამო.
+
+
+{{ესკიზი}}
