--- a/კატანა.mw
+++ b/კატანა.mw
@@ -3,3 +3,24 @@
 
 
 {{ესკიზი}}
+
+[[ca:Katana]]
+[[da:Katana]]
+[[de:Katana]]
+[[en:Katana]]
+[[es:Katana]]
+[[fi:Katana]]
+[[fr:Katana]]
+[[he:קטאנה]]
+[[it:Katana]]
+[[ja:日本刀]]
+[[lt:Katana]]
+[[ms:Katana]]
+[[nl:Katana]]
+[[pl:Katana]]
+[[pt:Katana]]
+[[ru:Катана]]
+[[sl:Katana]]
+[[sv:Katana]]
+[[tr:Katana]]
+[[zh:日本刀]]
