*Empty MediaWiki Message*

--- a/კატანა.mw
+++ b/კატანა.mw
@@ -1,5 +1,5 @@
 [[სურათი:Katana.jpg|thumb]]
-'''კატანა''' არის იაპონური დიდი ხმალ, რომელსაც ძირითადად [[სამურაები]] ხმარობდნენ. რიგითი მოქალაქისთვის კატანა ჩვეულებრივ მიუწვდომელი იყო თავისი სიძვირისა გამო.
+'''კატანა''' არის იაპონური დიდი ხმალ, რომელსაც ძირითადად [[სამურაი|სამურაები]] ხმარობდნენ. რიგითი მოქალაქისთვის კატანა ჩვეულებრივ მიუწვდომელი იყო თავისი სიძვირისა გამო.
 
 
 {{ესკიზი}}
