*Empty MediaWiki Message*

--- a/ბუქარესტი.mw
+++ b/ბუქარესტი.mw
@@ -15,7 +15,7 @@
 | <br/> $20,057 ([[მსყიდველობით უნარიანობაზე გაანგარიშებით|მუგ]])<br/>$640 მლნ
 |- 
 | '''[[მოსახლეობა]]'''<br/>&nbsp;• საერთო (2003)<br/>&nbsp;• [[სიმჭიდროვე]]
-| <br/> 2,082,000<br/> (2,500,000, აგლომერაცია) 8074.6/კმ²
+| <br/> 2,082,000<br/> (2,500,000, აგლ.) 8074.6/კმ²
 |- 
 | '''[[ბუქარესტის მერი|მერი]]'''
 | [[ვიდანუ, ადრიენ|ადრიენ ვიდეანუ]] 
