*Empty MediaWiki Message*

--- a/გერგეტის_სამების_ეკლესია.mw
+++ b/გერგეტის_სამების_ეკლესია.mw
@@ -1,3 +1,4 @@
+[[სურათი:გერგეტის ტაძარი.jpg|thumb|გერგეტის ტაძარი]]
 {|border=0 cellpadding=10 width=100%
 |- bgcolor=whitesmoke
 |<small>საკუთარ სახელს "''' გერგეტი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გერგეტი]]
@@ -7,5 +8,18 @@
 
 გეგმით ოთხკუთხა ტაძრის გუმბათი ეყრდობა აფსიდის კედლებსა და თავისუფლად მდგარ 2 ბურჯს. ტაძარი ნაგებია კარგად გათლილი ანდეზიტის კვადრატებით. ფასადები და გუმბათის ყელი, აგრეთვე ორსართულიანი სამრეკლოს ფასადებიც მოჩუქურთმებულია. ტაძრის სამხრეთ კედელზე მიშენებულ მცირე ზომის საბჭეოში იკრიბებოდა უხუცესთა საბჭო, რომელიც თემის ცხოვრების უმნიშვნელოვანეს საკითხებს წყვეტდა. სამება ხევის უმთავრესი სალოცავი იყო. 1392 გუჯარში გერგეტის სამების მონასტერთან ერთად მოხსენიებულია "არაგუზე ციხე გერგეტაული". [[ვახუშტი ბატონიშვილი|ვახუშტი]] სამების ეკლესიას მიიჩნევს მცხეთის საკათალიკოსოს სამკაულთა და წმ. ნინოს ჯვრის სახიზარ ადგილად.
 
-
+==რესურსები ინტერნეტში ==
+[http://children.iatp.ge/istoria/eqskursia/gergeti.htm გერგეტის ტაძარი]
 [[კატეგორია:საქართველოს ხუროთმოძღვრების ძეგლები]]
+
+
+
+<gallery>
+სურათი:Geo95-150-2400.jpg|
+სურათი:Geo95-148-2400.jpg|
+სურათი:Geo95-151-2400.jpg|
+სურათი:Geo95-149-2400.jpg|
+სურათი:Geo95-155-2400.jpg|
+სურათი:Geo95-153-2400.jpg|
+სურათი:Geo95-154-2400.jpg|
+</gallery>
