*Empty MediaWiki Message*

--- a/კიშინიოვი.mw
+++ b/კიშინიოვი.mw
@@ -4,11 +4,11 @@
 |- bgcolor="#FFFFFF"
 | align="center" colspan=2 | [[სურათი:Flagge-Chisinau-01-11 (Flagge).png|190px|კიშინიოვის დროშა]]&nbsp;&nbsp;&nbsp;[[სურათი:Flagge-Chisinau-01-10.png|85px|კიშინიოვის გერბი]]&nbsp;&nbsp;&nbsp;
 |- bgcolor="#FFFFFF"
-! colspan="2" | Karten
+! colspan="2" | რუქა
 |- bgcolor="#FFFFFF"
 | align="center" colspan=2 | [[სურათი:Karte Moldawien 03 03.png|300px|ქალაქის მდებარეობა მოლდოვას რუქაზე]]
 |- bgcolor="#FFFFFF"
-! colspan="2" | Stadtdaten
+! colspan="2" | სტატისტიკა
 |- bgcolor="#FFFFFF"
 |[[ენა]]: || [[მოლდავური ენა|მოლდავური]]
 |- bgcolor="#FFFFFF"
