--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -105,7 +105,7 @@
 
 3) [[პროგრესიული იუდაიზმი]] მრავალი მოძრაობისგან შესდგება, რომლებსაც რამოდენიმე ქვეყნის ებრაელთა შორის მრავალი მიმდევარი ჰყავთ.
 
-* [[რეფორმისტული იუდაიზმი]], რომელსაც ზოგ ქვეყანაში ლიბერალურს ან პროგრესიულსაც უწოდებენ, მე-19 საუკუნის გერმანიაში წარმოიშვა განათლების მოძრაობის გავლენით. სხვა მიმდინარეობებისაგან მისი განმასხვავებელი თვისებაა უარყოფა იმისა, რომ ებრაული კანონების შესრულება აუცილებელი რელიგიური ვალდებულებაა. რეფორმისტების აზრით, იუდაიზმის საკითხებში გაცნობიერებული თითოეული ებრაელი უნდა სარგებლობდეს ავტონომიით, რომლის ფარგლებშიც თვითონ გადაწყვიტავს, თუ სად მიაჩნია თორის ტექსტი დამაჯერებლად და რომელი კანონები შეასრულოს. რეფორმისტები ებრაული ტრადიციის ინდივიდუალურად შეთვისებას მოითხოვენ, და არა დადგენილი წესებით ღვთისმსახურებას. საბოლოოდ, რეფორმისტებმა ებრაელობა დასახეს მხოლოდ რელიგიად, და არა ეროვნებად ან კულტურად. რეფორმისტებმა აგრეთვე უარყვეს თორით ნაკარნახევი რიტუალური წესები და ყოფაცხოვრების შემბოჭავი, - თორისავე ბევრი მკრძალავი კანონი; სამაგიეროდ, რეფორმისტებმა ხაზი გაუსვეს წინასწარმეტყველთა მოწოდებას ზნეობრივი სისპეტაკისაკენ. რეფორმისტულმა იუდაიზმმა თავისი ლოცვანიც გამოიმუშავა დიასპორის ქვეყნების ენებზე. ბოლო დროს, ბევრმა რეფორმისტულმა თემმა აღადგინა ებრაულ ენაზე ლოცვის ტრადიცია და ბევრი მათგანი მორწმუნეებს მოუწოდებს რამდენადმე დაიცვან ებრაული კანონები. (დიდ ბრიტანეთში, რეფორმისტული მიმდინარეობა ამჟამად ორ რელიგიურ თემადაა გაყოფილი: რეფორმისტულად და ლიბერალურად. რეფორმისტული თემი ლიბერალურზე ბევრად უფრო ტრადიციონალისტურია, ოღონდ თეოლოგიური შეხედულებებით ისინი არ განსხვავდებიან ერთმანეთისგან).       
+* [[რეფორმისტული იუდაიზმი]], რომელსაც ზოგ ქვეყანაში ლიბერალურს ან პროგრესიულსაც უწოდებენ, მე-19 საუკუნის გერმანიაში წარმოიშვა განათლების მოძრაობის გავლენით. სხვა მიმდინარეობებისაგან მისი განსასხვავებელი თვისებაა უარყოფა იმისა, რომ ებრაული კანონების შესრულება აუცილებელი რელიგიური ვალდებულებაა. რეფორმისტების აზრით, იუდაიზმის საკითხებში გაცნობიერებული თითოეული ებრაელი უნდა სარგებლობდეს ავტონომიით, რომლის ფარგლებშიც თვითონ გადაწყვიტავს, თუ სად მიაჩნია თორის ტექსტი დამაჯერებლად და რომელი კანონები შეასრულოს. რეფორმისტები ებრაული ტრადიციის ინდივიდუალურად შეთვისებას მოითხოვენ, და არა დადგენილი წესებით ღვთისმსახურებას. საბოლოოდ, რეფორმისტებმა ებრაელობა დასახეს მხოლოდ რელიგიად, და არა ეროვნებად ან კულტურად. რეფორმისტებმა აგრეთვე უარყვეს თორით ნაკარნახევი რიტუალური წესები და ყოფაცხოვრების შემბოჭავი, - თორისავე ბევრი ამკრძალავი კანონი; სამაგიეროდ, რეფორმისტებმა ხაზი გაუსვეს წინასწარმეტყველთა მოწოდებას ზნეობრივი სისპეტაკისაკენ. რეფორმისტულმა იუდაიზმმა თავისი ლოცვანიც გამოიმუშავა დიასპორის ქვეყნების ენებზე. ბოლო დროს, ბევრმა რეფორმისტულმა თემმა აღადგინა ებრაულ ენაზე ლოცვის ტრადიცია და ბევრი მათგანი მორწმუნეებს მოუწოდებს რამდენადმე დაიცვან ებრაული კანონები. (დიდ ბრიტანეთში, რეფორმისტული მიმდინარეობა ამჟამად ორ რელიგიურ თემადაა გაყოფილი: რეფორმისტულად და ლიბერალურად. რეფორმისტული თემი ლიბერალურზე ბევრად უფრო ტრადიციონალისტურია, ოღონდ თეოლოგიური შეხედულებებით ისინი არ განსხვავდებიან ერთმანეთისგან).       
         
  
          
