*Empty MediaWiki Message*

--- a/ვიქტორ_იუშჩენკო.mw
+++ b/ვიქტორ_იუშჩენკო.mw
@@ -1,4 +1,4 @@
-[[სურათი:Yushchenko OurUkraine.jpg|ვიქტორ იუშენკო]]
+[[სურათი:Yushchenko OurUkraine.jpg|thumb|ვიქტორ იუშენკო]]
 '''ვიქტორ ანდრიოვიჩ იუშენკო''' (უკრ.: Віктор Андрійович Ющенко) (*[[23 თებერვალი]], [[1954]]) [[უკრაინა|უკრაინის]] პრეზიდენტია. უკრაინის პოლიტიკური კოალიციის "ნაშა უკრაინა" ლიდერი, მთავარი ოპოზიციური კანდიდატი იყო 2004 წლის ოქტომბერ-მოემბრის უკრაინის საპრეზიდენტო არჩევნებში. უკრაინის ცენტრალურმა საარჩევნო კომისიამ 2004 წლის 26 დეკემბერს გამართულ არჩევნების მეორ ტურში იუშენკო გამარჯვებულად გამოაცხადა ხმების 52%-ით 44%-ის წინააღმდეგ (გაუსწრო რა ვიქტორ იანუკოვიჩს). პოპულარული საპროტესტო მოძრაობა, რომელმაც ის მთავრობის სათავეში მოიყვანა დღეს ცნობილია, როგორც "[[ნარინჯისფერი რევოლუცია]]".
 
 იუშენკო 1993-1999 წლებში მსახურობდა ქვეყნის ეროვნული ბანკის თავმჯდომარედ, ხოლო 1999-2001 წლებში კი უკრაინის პრემიერ-მინისტრად.
