--- a/იანვარი_2005.mw
+++ b/იანვარი_2005.mw
@@ -24,10 +24,9 @@
 
 
 <gallery>
-Image:MSaakshvili.jpg|მიხეილ სააკაშვილი
-Image:Yushchenko OurUkraine.jpg|ვიქტორ იუშჩენკო
+Image:MSaakshvili.jpg|[[სააკაშვილი, მიხეილ|მიხეილ სააკაშვილი]]
+Image:Yushchenko OurUkraine.jpg|[[იუშენკო, ვიქტორ|ვიქტორ იუშენკო]]
 </gallery>
-
 
 ==უცხოეთი==
 
