--- a/ვარდების_რევოლუცია.mw
+++ b/ვარდების_რევოლუცია.mw
@@ -1,3 +1,4 @@
+[[სურათი:Rose Revolution.jpg|thumb|300px|დემონსტრაცია თავისუფლების მოედანზე]]
 '''"ვარდების რევოლუცია"''' - [[რევოლუცია|რევოლუციად]] წოდებული მშვიდობიანი საყოველთაო-სახალხო გამოსვლები ქალაქ [[თბილისი|თბილისში]], [[2003]] წლის ნოემბერში, რომლის შედეგადაც [[23 ნოემბერი|23 ნოემბერს]]  [[საქართველო|საქართველოში]] შეიცვალა პოლიტიკური ხელისუფლება. ქართულ საზოგადოებაში ამ პოლიტიკური მოვლენის არსის შესახებ არსებობს რამდენიმე განსხვავებული თვალსაზრისი (მიმდევრობა მოცემულია ვიკიპედიაში მათი განთავსების შესაბამისად):
 
 
