*Empty MediaWiki Message*

--- a/ბირთვული_კვლევების_ევროპული_ორგანიზაცია.mw
+++ b/ბირთვული_კვლევების_ევროპული_ორგანიზაცია.mw
@@ -1,2 +1,32 @@
-'''CERN''' - ('''the European Organization for Nuclear Research''') მსოფლიოს უდიდესი [[ლაბორატორია]], [[ელემენტალური ნაწილაკების]] ფიზიკაში.
-ცენტრი განლაგებულია ქალაქ [[ჟენევის]] დასავლეთით ისე, რომ არის ნაწილობრივ [[შვეიცარიის]] და ნაწილობრივ [[საფრანგეთის]] ტერიტორიაზე.
+'''ატომური კვლევების ევროპული ორგანიზაცია''' - '''CERN''' (აკრონიმი ფრანგ. '''Organisation Européenne pour la Recherche Nucléaire''') მსოფლიოს უდიდესი [[ლაბორატორია]] [[ელემენტალური ნაწილაკების]] ფიზიკაში. ცენტრი განლაგებულია ქალაქ [[ჟენევა|ჟენევის]] დასავლეთით ისე, ნაწილობრივ [[შვეიცარიის]] და ნაწილობრივ [[საფრანგეთის]] ტერიტორიაზე.
+
+{{ესკიზი}}
+
+
+[[კატეგორია:საერთაშორისო კვლევითი ორგანიზაციები]]
+
+[[bg:CERN]]
+[[cs:Evropská organizace pro jaderný výzkum]]
+[[da:CERN]]
+[[de:CERN]]
+[[eo:CERN]]
+[[es:CERN]]
+[[fi:CERN]]
+[[fr:Organisation européenne pour la recherche nucléaire]]
+[[he:CERN]]
+[[hu:CERN]]
+[[id:CERN]]
+[[it:CERN]]
+[[ja:ヨーロッパ素粒子物理学研究所]]
+[[ko:유럽 입자 물리 연구소]]
+[[nl:Centre Européen pour la Recherche Nucléaire]]
+[[nn:CERN]]
+[[no:CERN]]
+[[pl:CERN]]
+[[pt:CERN]]
+[[ru:CERN]]
+[[sk:CERN]]
+[[sl:Evropska organizacija za jedrske raziskave]]
+[[sv:CERN]]
+[[tr:CERN]]
+[[zh-min-nan:CERN]]
