*Empty MediaWiki Message*

--- a/კიშინიოვი.mw
+++ b/კიშინიოვი.mw
@@ -1,47 +1,5 @@
-{| border="0" cellpadding="2" cellspacing="1" align="right" style="margin-left:1em; font-size:95%; background:#B3B3B3;"
-|- bgcolor="#FFFFFF" align="center"
-! colspan="2" | დროშა და გერბი
-|- bgcolor="#FFFFFF"
-| align="center" colspan=2 | [[სურათი:Flagge-Chisinau-01-11 (Flagge).png|190px|კიშინიოვის დროშა]]&nbsp;&nbsp;&nbsp;[[სურათი:Flagge-Chisinau-01-10.png|85px|კიშინიოვის გერბი]]&nbsp;&nbsp;&nbsp;
-|- bgcolor="#FFFFFF"
-! colspan="2" | რუქა
-|- bgcolor="#FFFFFF"
-| align="center" colspan=2 | [[სურათი:Karte Moldawien 03 03.png|300px|ქალაქის მდებარეობა მოლდოვას რუქაზე]]
-|- bgcolor="#FFFFFF"
-! colspan="2" | სტატისტიკა
-|- bgcolor="#FFFFFF"
-|[[ენა]]: || [[მოლდავური ენა|მოლდავური]]
-|- bgcolor="#FFFFFF"
-|[[საკოორდინატო სისტემა|გეოგრ. მდებარეობა]]: || 47° 00' 50" N <br> 28° 51' 00" S
-|- bgcolor="#FFFFFF"
-|[[Höhe]]: || ca. 85 [[Normalnull|m.ü.M.]]
-|- bgcolor="#FFFFFF"
-|[[ფართობი]]: || 161,2 კმ²
-|- bgcolor="#FFFFFF"
-|[[მოსახლეობა]]:</br></br></br><small>(1 იანვ. 2005)</small>|| ქ. კიშინიოვი: 592.600</br>მუნიციპ.: 716.700</br>&nbsp;&nbsp;<small>აგლომერაცია: 647.700</small></br>&nbsp;&nbsp;
-|- bgcolor="#FFFFFF"
-|[[სიმჭიდროვე]]: || 4.018 ად./კმ²
-|- bgcolor="#FFFFFF"
-|ადმ. დანაწილება: || 5 რაიონი
-|- bgcolor="#FFFFFF"
-|აეროპორტი:<br/><br/>|| [[კიშინიოვის საერთაშორის აეროპორტი|კიშინიოვის აეროპორტი]] (KIV)<br/>მანძილი: დაახ. 15 კმ
-|- bgcolor="#FFFFFF"
-|ქალაქის მერი: || [[ურსი, ვასილ|ვასილ ურსუ]]
-|- bgcolor="#FFFFFF"
-|ოფიც. ვებ-გვერდი: || [http://www.chisinau.md www.chisinau.md]
-|-
-! colspan="2" align="center" | 
-|- bgcolor="#FFFFFF"
-| align="center" colspan=2 | [[სურათი:Satellit_Chisinau_01.jpg|300px|კიშინიოვის სატელიტური ფოტო]]
-|- bgcolor="#FFFFFF"
-! colspan="2" align="center" | კიშინიოვის სატელიტური ფოტო
-|- bgcolor="#FFFFFF"
-| align="center" colspan=2 | [[სურათი:Statistik KIV Population 01 01.png|300px|გრაფიკი: მოსახლეობის ზრდა]]
-|- bgcolor="#FFFFFF"
-! colspan="2" align="center" | გრაფიკი: მოსახლეობის ზრდა
-|}
-
-'''კიშინიოვი''' (Chişinău, IPA /ki.ʃi.'nəǔ/) [[მოლდოვა|მოლდოვის]] [[დედაქალაქი]] და ქვეყნის ინდუსტრიული და კომერციუილი ცენტრია. ის ასევე მოლდოვის უდიდესი ქალქია; ითვლება ევროპის ერთ-ერთ ყველაზე მწვანე ქალაქად. მდებარეობს ქვეყნის ცენტრში, მდინარე ბიკზე. ქალაქი ასევე ითვლება რუმინული მოსახლეობის ყველაზე დიდ ურბანულ კონცენტრაციად [[ბუხარესტი|ბუხარესტის]] შემდეგ.
+[[სურათი:Chisinau Coat-of-Arms.png|thumb|ქალაქის გერბი]]
+'''კიშინიოვი''' (Chişinău, IPA /ki.ʃi.'nəǔ/) [[მოლდოვა|მოლდოვის]] [[დედაქალაქი]] და ქვეყნის ინდუსტრიული და კომერციუილი ცენტრია. ის ასევე მოლდოვის უდიდესი ქალქია; ითვლება ევროპის ერთ-ერთ ყველაზე მწვანე ქალაქად. მდებარეობს ქვეყნის ცენტრში, მდინარე ბიკზე. ქალაქი ასევე ითვლება რუმინული მოსახლეობის ყველაზე დიდ ურბანულ კონცენტრაციად [[ბუქარესტი|ბუქარესტის]] შემდეგ.
 
 ==გეოგრაფია და კლიმატი==
 ==ისტორია==
