*Empty MediaWiki Message*

--- a/კიშინიოვი.mw
+++ b/კიშინიოვი.mw
@@ -41,7 +41,7 @@
 ! colspan="2" align="center" | გრაფიკი: მოსახლეობის ზრდა
 |}
 
-'''კიშინიოვი''' (Chişinău, IPA /ki.ʃi.'nəǔ/) [[მოლდოვა|მოლდოვის]] [[დედაქალაქი]] და ქვეყნის ინდუსტრიული და კომერციუილი ცენტრია. ის ასევე მოლდოვის უდიდესი ქალქია; ითვლება ევროპის ერთ-ერთ ყველაზე მწვანე ქალაქად. მდებარეობს ქვეყნის ცენტრში, მდინარე ბიკზე. ქალაქი ასევე ითვლება რუმინული მოსახლეობის ყველაზე დიდ ურბანულ კონცენტრაციად [[ბუხარესტი|ბუხარესტის]] შემდეგ.
+'''კიშინიოვი''' (Chişinău, IPA /ki.ʃi.'nəǔ/) [[მოლდოვა|მოლდოვის]] [[დედაქალაქი]] და ქვეყნის ინდუსტრიული და კომერციუილი ცენტრია. ის ასევე მოლდოვის უდიდესი ქალქია; ითვლება ევროპის ერთ-ერთ ყველაზე მწვანე ქალაქად. მდებარეობს ქვეყნის ცენტრში, მდინარე ბიკზე. ქალაქი ასევე ითვლება რუმინული მოსახლეობის ყველაზე დიდ ურბანულ კონცენტრაციად [[ბუქარესტი|ბუქარესტის]] შემდეგ.
 
 ==გეოგრაფია და კლიმატი==
 ==ისტორია==
