--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -105,7 +105,11 @@
 
 3) [[პროგრესიული იუდაიზმი]] მრავალი მოძრაობისგან შესდგება, რომლებსაც რამოდენიმე ქვეყნის ებრაელთა შორის მრავალი მიმდევარი ჰყავთ.
 
-* [[რეფორმისტული იუდაიზმი]], რომელსაც ზოგ ქვეყანაში ლიბერალურს ან პროგრესიულსაც უწოდებენ, მე-19 საუკუნის გერმანიაში წარმოიშვა განათლების მოძრაობის გავლენით. სხვა მიმდინარეობებისაგან მისი განსასხვავებელი თვისებაა უარყოფა იმისა, რომ ებრაული კანონების შესრულება აუცილებელი რელიგიური ვალდებულებაა. რეფორმისტების აზრით, იუდაიზმის საკითხებში გაცნობიერებული თითოეული ებრაელი უნდა სარგებლობდეს ავტონომიით, რომლის ფარგლებშიც თვითონ გადაწყვიტავს, თუ სად მიაჩნია თორის ტექსტი დამაჯერებლად და რომელი კანონები შეასრულოს. რეფორმისტები ებრაული ტრადიციის ინდივიდუალურად შეთვისებას მოითხოვენ, და არა დადგენილი წესებით ღვთისმსახურებას. საბოლოოდ, რეფორმისტებმა ებრაელობა დასახეს მხოლოდ რელიგიად, და არა ეროვნებად ან კულტურად. რეფორმისტებმა აგრეთვე უარყვეს თორით ნაკარნახევი რიტუალური წესები და ყოფაცხოვრების შემბოჭავი, - თორისავე ბევრი ამკრძალავი კანონი; სამაგიეროდ, რეფორმისტებმა ხაზი გაუსვეს წინასწარმეტყველთა მოწოდებას ზნეობრივი სისპეტაკისაკენ. რეფორმისტულმა იუდაიზმმა თავისი ლოცვანიც გამოიმუშავა დიასპორის ქვეყნების ენებზე. ბოლო დროს, ბევრმა რეფორმისტულმა თემმა აღადგინა ებრაულ ენაზე ლოცვის ტრადიცია და ბევრი მათგანი მორწმუნეებს მოუწოდებს რამდენადმე დაიცვან ებრაული კანონები. (დიდ ბრიტანეთში, რეფორმისტული მიმდინარეობა ამჟამად ორ რელიგიურ თემადაა გაყოფილი: რეფორმისტულად და ლიბერალურად. რეფორმისტული თემი ლიბერალურზე ბევრად უფრო ტრადიციონალისტურია, ოღონდ თეოლოგიური შეხედულებებით ისინი არ განსხვავდებიან ერთმანეთისგან).       
+* [[რეფორმისტული იუდაიზმი]], რომელსაც ზოგ ქვეყანაში ლიბერალურს ან პროგრესიულსაც უწოდებენ, მე-19 საუკუნის გერმანიაში წარმოიშვა განათლების მოძრაობის გავლენით. სხვა მიმდინარეობებისაგან მისი განსასხვავებელი თვისებაა უარყოფა იმისა, რომ ებრაული კანონების შესრულება აუცილებელი რელიგიური ვალდებულებაა. რეფორმისტების აზრით, იუდაიზმის საკითხებში გაცნობიერებული თითოეული ებრაელი უნდა სარგებლობდეს ავტონომიით, რომლის ფარგლებშიც თვითონ გადაწყვიტავს, თუ სად მიაჩნია თორის ტექსტი დამაჯერებლად და რომელი კანონები შეასრულოს. რეფორმისტები ებრაული ტრადიციის ინდივიდუალურად შეთვისებას მოითხოვენ, და არა დადგენილი წესებით ღვთისმსახურებას. საბოლოოდ, რეფორმისტებმა ებრაელობა დასახეს მხოლოდ რელიგიად, და არა ეროვნებად ან კულტურად. რეფორმისტებმა აგრეთვე უარყვეს თორით ნაკარნახევი რიტუალური წესები და ყოფაცხოვრების შემბოჭავი, - თორისავე ბევრი ამკრძალავი კანონი; სამაგიეროდ, რეფორმისტებმა ხაზი გაუსვეს წინასწარმეტყველთა მოწოდებას ზნეობრივი სისპეტაკისაკენ. რეფორმისტულმა იუდაიზმმა თავისი ლოცვანიც გამოიმუშავა დიასპორის ქვეყნების ენებზე. ბოლო დროს, ბევრმა რეფორმისტულმა თემმა აღადგინა ებრაულ ენაზე ლოცვის ტრადიცია და ბევრი მათგანი მორწმუნეებს მოუწოდებს რამდენადმე დაიცვან ებრაული კანონები. (დიდ ბრიტანეთში, რეფორმისტული მიმდინარეობა ამჟამად ორ რელიგიურ თემადაა გაყოფილი: რეფორმისტულად და ლიბერალურად. რეფორმისტული თემი ლიბერალურზე ბევრად უფრო ტრადიციონალისტურია, ოღონდ თეოლოგიური შეხედულებებით ისინი არ განსხვავდებიან ერთმანეთისგან). 
+
+* [[რეკონსტრუქსიონისტური იუდაიზმი]] თავდაპირველად ფილოსოფიურ მიმდინარეობად წარმოიშვა მე-20 საუკუნის კონსერვატორი რაბინის, მორდეხაი კაპლანის მიერ; მოგვიანებით, ის და მისი მიმდევრები გამოეყვნენ კონსერვატიულ იუდაიზმს და წამოიწყეს მოძრაობა, რომლის მიზანია იუდაიზმის ხელახალი ინტერპრეტაცია თანამედროვე კულტურასთან მის შესაფერებლად. რეფორმისტული იუდაიზმის მსგავსად, არც რეკონსტრუქციონისტური იუდაიზმი თვლის ებრაულ კანონებს დამავალებლად, მაგრამ რეფორმიზისაგან განსხვავებით, რეკონსტრუქციონისტური აზროვნება ხაზს უსვამს მორწმუნეთა თემების როლს იმის გადაწყვეტაში, თუ რომელ კანონებს უნდა დაემორჩილონ მათი წევრები.  
+
+4) [[ჰუმანისტური იუდაიზმი]] პატარა არარელიგიური მოძრაობაა, რომლის მტკიცებით ებრაული ვინაობა ებრაელთა ისტორიითა და კულტურით განისაზღვრება, და არა წმინდა ტექსტებით. რაბინი შერვინ უაინის მიერ დაარსებული ეს მიმდინარეობა უფრო ჩრდილოეთ ამერიკაშია ცნობილი, მაგრამ მიმდევრები ჰყავს აგრეთვე ევროპაში, ლათინურ ამერიკაში და ისრაელშიც. (უნდა აღინიშნოს, რომ ვინაიდან ჰუმანისტური იუდაიზმი უარყოფს ზებუნებრივი ღმერთის ცნებას, რასაც სხვა ებრაული მიმდინარეობები იუდაიზმის საფუძვლად მიიჩნევენ, მისი ებრაულ მიმდინარეობად ჩათვლის საკითხი აზრთა უთანხმოებას იწვევს).        
         
  
          
