*Empty MediaWiki Message*

--- a/გიგა_ბოკერია.mw
+++ b/გიგა_ბოკერია.mw
@@ -1,4 +1,4 @@
-[[სურათი:giga.jpg|thumb|right|180px|გიგა ბოკერია]] '''გიგა (გიორგი) ბოკერია''' (დ.[[20 აპრილი]], [[1972]]) -- ქართველი პოლიტიკური მოღვაწე, საქართველოს პარლამენტის წევრი, იურიდიულ საკითხთა კომიტეტის თავმჯდომარის მოადგილე, თავდაცვისა და უშიშროების კომიტეტის წევრი, პოლიტიკური პარტია [[ერთიანი ნაციონალური მოძრაობა (პარტია)|ერთაინი ნაციონალური მოძრაობის]] ერთ–ერთი ლიდერი. 
+[[სურათი:giga.jpg||frame|გიგა ბოკერია]] '''გიგა (გიორგი) ბოკერია''' (დ.[[20 აპრილი]], [[1972]]) -- ქართველი პოლიტიკური მოღვაწე, საქართველოს პარლამენტის წევრი, იურიდიულ საკითხთა კომიტეტის თავმჯდომარის მოადგილე, თავდაცვისა და უშიშროების კომიტეტის წევრი, პოლიტიკური პარტია [[ერთიანი ნაციონალური მოძრაობა (პარტია)|ერთაინი ნაციონალური მოძრაობის]] ერთ–ერთი ლიდერი. 
 
 
 ==საზოგადოებრივი მოღვაწეობა==
