*Empty MediaWiki Message*

--- a/ბუქარესტი.mw
+++ b/ბუქარესტი.mw
@@ -1,31 +1,30 @@
-{| class="wikitable" style="font-size: 90%; float:right; margin-left: 1em;" width="300px"
-|-
-| align="center" colspan=2 | <font size="+1">'''Municipiul Bucureşti'''</font>
-|-
-| align="center" colspan=2 | <font size="+1">'''ბუქარესტის მუნიციპ.'''</font>
-|-
-| align="center" colspan=2 | [[Image:Bancorex building bgiu.jpg|center|220px|ბუქარესტის ცენტრი]]
-|- 
-| align="center" colspan=2 | [[Image:Bucuresti-localization.png|ბუქარესტის მდებარეობა რუმინეთში]]
-|- 
-| '''[[ფართობი]]'''<br/>&nbsp;• ქალაქი<br />&nbsp;• აგლომერაცია<br/>
+{| border="1" cellpadding="2" cellspacing="0" align="right" width="270px"
+|+ '''Municipiul Bucureşti'''<br/>'''ბუქარესტის მუნიციპ.'''
+|-----
+| align="center" colspan="2" | [[Image:Bancorex building bgiu.jpg|center|220px|ბუქარესტის ცენტრი]]
+|-----
+| align="center" colspan="2" | [[Image:Bucuresti-localization.png|ბუქარესტის მდებარეობა რუმინეთში]]
+|-----
+|bgcolor=white| [[ფართობი]]<br/>•ქალაქი<br />&nbsp;• აგლომერაცია<br/>
 | <br/>228 [[კმ²]]<br/>1,521 [[კვ²]]
-|- 
+|-----
 | '''[[ეკონომიკა]]'''<br/>&nbsp;• [[ეშპ]] [[პერ კაპიტა|პკ]] (2005)<br/>&nbsp;• ბიუჯეტი (2005)
 | <br/> $20,057 ([[მსყიდველობით უნარიანობაზე გაანგარიშებით|მუგ]])<br/>$640 მლნ
-|- 
-| '''[[მოსახლეობა]]'''<br/>&nbsp;• საერთო (2003)<br/>&nbsp;• [[სიმჭიდროვე]]
-| <br/> 2,082,000<br/> (2,500,000, აგლ.) 8074.6/კმ²
-|- 
+|-----
+|bgcolor=white| [[მოსახლეობა]]<br/>&nbsp;საერთო (2003) <br/>&nbsp;• [[სიმჭიდროვე]]
+| <br/> 2,082,000<br/> (2,500,000, აგლ.) 8074.6/კმ²<sup>2</sup>
+|----- 
 | '''[[ბუქარესტის მერი|მერი]]'''
 | [[ვიდანუ, ადრიენ|ადრიენ ვიდეანუ]] 
-|- 
+|------ 
 | '''[[დროის სარტყელი|დრო]]'''
 | [[GMT]]+2
-|- 
+|------ 
 | '''[[გეოგრაფიული კოორდინატები|კოორდ.]]'''
 | 44°25′N 26°06′E
+|-----
 |}
+
 
 
 '''ბუქარესტი''' (რუმინ.: Bucureşti /bu.ku'reʃtʲ/) [[რუმინეთი|რუმინეთის]] [[დედაქალაქი]] და ქვეყნის ინდუსტრიული და კომერციული ცენტრია. მდებარეობას ქვეყნის სამხრეთ-აღმოსავლეთით, 44°25′N 26°06′E-ზე, მდინარე დამბოვიცას სანაპიროზე.
