*Empty MediaWiki Message*

--- a/კიშინიოვი.mw
+++ b/კიშინიოვი.mw
@@ -14,7 +14,7 @@
 |- bgcolor="#FFFFFF"
 |[[საკოორდინატო სისტემა|გეოგრ. მდებარეობა]]: || 47° 00' 50" N <br> 28° 51' 00" S
 |- bgcolor="#FFFFFF"
-|[[Höhe]]: || ca. 85 [[Normalnull|m.ü.M.]]
+|[[სიმაღლე ზღვის დონიდან|დონე]]: || დაახ. 85 მ.
 |- bgcolor="#FFFFFF"
 |[[ფართობი]]: || 161,2 კმ²
 |- bgcolor="#FFFFFF"
