*Empty MediaWiki Message*

--- a/ბირთვული_კვლევების_ევროპული_ორგანიზაცია.mw
+++ b/ბირთვული_კვლევების_ევროპული_ორგანიზაცია.mw
@@ -1,4 +1,14 @@
-'''ატომური კვლევების ევროპული ორგანიზაცია''' - '''CERN''' (აკრონიმი ფრანგ. '''Organisation Européenne pour la Recherche Nucléaire''') მსოფლიოს უდიდესი [[ლაბორატორია]] [[ელემენტალური ნაწილაკების]] ფიზიკაში. ცენტრი განლაგებულია ქალაქ [[ჟენევა|ჟენევის]] დასავლეთით ისე, ნაწილობრივ [[შვეიცარიის]] და ნაწილობრივ [[საფრანგეთის]] ტერიტორიაზე.
+[Image:CERN logo 400x400.gif|thumb|200px|right|CERN logo]]
+'''ატომური კვლევების ევროპული ორგანიზაცია''' - '''CERN''' (აკრონიმი ფრანგ. '''Organisation Européenne pour la Recherche Nucléaire''') მსოფლიოს უდიდესი [[ლაბორატორია]] [[ელემენტალური ნაწილაკების]] ფიზიკაში. ცენტრი განლაგებულია ქალაქ [[ჟენევა|ჟენევის]] დასავლეთით, ნაწილობრივ [[შვეიცარიის]] და ნაწილობრივ [[საფრანგეთის]] ტერიტორიაზე. ორგანიზაცია ასევე ცნობილია, როგორც [[ინტერნეტის დაბადების ადგილი]]. დაფუძნდა 1954 წლის 29 სექტემბერს წევრ ქვეყანათა ხელმოწერით. აკეო-ს თავდაპირველად 12 წევრი ჰყავდა, რაც დღეისთვის 20-მდე გაიზარდა.
+
+მისი მთავარი ფუნქცია ატომური აქსელერეტორების მოწოდებაა მაღალი ენერგიის ფიზიკის კვლევებისთვის და უამრავი ექსპერიმენტისთვის, რომელიც აკეო-ს საერთაშორისო კოლაბორატორთა მიერ იქნა აშენებული საერთო გამოყენებისთვის. მთავარ ლაბორატორიაში მდებარეობს ვრცელი კომპიუტერული ცენტრი უძლიერესი მონაცემთა დამმუშავებელი მოწყობილობებით, რომელთა ძირითადი დანიშნულება ექსპერიმენტულ მონაცემთა ანალიზია; და ვინაიდან ეს ცენტრი მკვლევართა დიდი ქსელისთვის უნდა იყოს ხელმისაწვდომი, ის ისტორიულად იყო (და დღემდე რჩება) უიდიდეს და უმთავრეს ქსელურ ჰაბად.
+
+ამჟამად აკეო-ში 3000-მდე თანამშრომელი მუშაობს სრული დატვირთვით. 6500-მდე მეცნიერი და ინჟინერი (500 უნივერსიტეტიდან და 80 ქვეყნიდან), მსოფლიოს ატომურ ფიზიკოსთა დაახ. ნახევარი, აკეო-ში წარმოებულ ექსპერიმენტებზე მუშაობს.
+
+ლაბორატორიას მსოფლიოში სახელი გაუთქვა [[ბრაუნი, დენ|დენ ბრაუნის]] ბესტერლერმა რომანმა "ანგელოზები და დემონები", რომლის პიველი თავი აქ თითქოსდა მომხდარ მოვლენებს ეძღვნება. მიკროკოსმოსის საგამოფენო ცენტრი ღიაა საზოგადოებისთვის, ასევე გიდის მეშვეობით შესაძლებელია ზოგიერთი მიმდინარე ექსპერიმენტის დათვალიერება.
+
+
+
 
 {{ესკიზი}}
 
