*Empty MediaWiki Message*

--- a/ბირთვული_კვლევების_ევროპული_ორგანიზაცია.mw
+++ b/ბირთვული_კვლევების_ევროპული_ორგანიზაცია.mw
@@ -1,4 +1,4 @@
-[Image:CERN logo 400x400.gif|thumb|200px|right|CERN logo]]
+[[სურათი:CERN logo 400x400.gif|thumb|200px|right|CERN-ის ლოგო]]
 '''ატომური კვლევების ევროპული ორგანიზაცია''' - '''CERN''' (აკრონიმი ფრანგ. '''Organisation Européenne pour la Recherche Nucléaire''') მსოფლიოს უდიდესი [[ლაბორატორია]] [[ელემენტალური ნაწილაკების]] ფიზიკაში. ცენტრი განლაგებულია ქალაქ [[ჟენევა|ჟენევის]] დასავლეთით, ნაწილობრივ [[შვეიცარიის]] და ნაწილობრივ [[საფრანგეთის]] ტერიტორიაზე. ორგანიზაცია ასევე ცნობილია, როგორც [[ინტერნეტის დაბადების ადგილი]]. დაფუძნდა 1954 წლის 29 სექტემბერს წევრ ქვეყანათა ხელმოწერით. აკეო-ს თავდაპირველად 12 წევრი ჰყავდა, რაც დღეისთვის 20-მდე გაიზარდა.
 
 მისი მთავარი ფუნქცია ატომური აქსელერეტორების მოწოდებაა მაღალი ენერგიის ფიზიკის კვლევებისთვის და უამრავი ექსპერიმენტისთვის, რომელიც აკეო-ს საერთაშორისო კოლაბორატორთა მიერ იქნა აშენებული საერთო გამოყენებისთვის. მთავარ ლაბორატორიაში მდებარეობს ვრცელი კომპიუტერული ცენტრი უძლიერესი მონაცემთა დამმუშავებელი მოწყობილობებით, რომელთა ძირითადი დანიშნულება ექსპერიმენტულ მონაცემთა ანალიზია; და ვინაიდან ეს ცენტრი მკვლევართა დიდი ქსელისთვის უნდა იყოს ხელმისაწვდომი, ის ისტორიულად იყო (და დღემდე რჩება) უიდიდეს და უმთავრეს ქსელურ ჰაბად.
