*Empty MediaWiki Message*

--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -109,7 +109,9 @@
 
 * [[რეკონსტრუქსიონისტური იუდაიზმი]] თავდაპირველად ფილოსოფიურ მიმდინარეობად წარმოიშვა მე-20 საუკუნის კონსერვატორი რაბინის, მორდეხაი კაპლანის მიერ; მოგვიანებით, ის და მისი მიმდევრები გამოეყვნენ კონსერვატიულ იუდაიზმს და წამოიწყეს მოძრაობა, რომლის მიზანია იუდაიზმის ხელახალი ინტერპრეტაცია თანამედროვე კულტურასთან მის შესაფერებლად. რეფორმისტული იუდაიზმის მსგავსად, არც რეკონსტრუქციონისტური იუდაიზმი თვლის ებრაულ კანონებს დამავალებლად, მაგრამ რეფორმიზისაგან განსხვავებით, რეკონსტრუქციონისტური აზროვნება ხაზს უსვამს მორწმუნეთა თემების როლს იმის გადაწყვეტაში, თუ რომელ კანონებს უნდა დაემორჩილონ მათი წევრები.  
 
-4) [[ჰუმანისტური იუდაიზმი]] პატარა არარელიგიური მოძრაობაა, რომლის მტკიცებით ებრაული ვინაობა ებრაელთა ისტორიითა და კულტურით განისაზღვრება, და არა წმინდა ტექსტებით. რაბინი შერვინ უაინის მიერ დაარსებული ეს მიმდინარეობა უფრო ჩრდილოეთ ამერიკაშია ცნობილი, მაგრამ მიმდევრები ჰყავს აგრეთვე ევროპაში, ლათინურ ამერიკაში და ისრაელშიც. (უნდა აღინიშნოს, რომ ვინაიდან ჰუმანისტური იუდაიზმი უარყოფს ზებუნებრივი ღმერთის ცნებას, რასაც სხვა ებრაული მიმდინარეობები იუდაიზმის საფუძვლად მიიჩნევენ, მისი ებრაულ მიმდინარეობად ჩათვლის საკითხი აზრთა უთანხმოებას იწვევს).        
+4) [[ჰუმანისტური იუდაიზმი]] პატარა არარელიგიური მოძრაობაა, რომლის მტკიცებით ებრაული ვინაობა ებრაელთა ისტორიითა და კულტურით განისაზღვრება, და არა წმინდა ტექსტებით. რაბინი შერვინ უაინის მიერ დაარსებული ეს მიმდინარეობა უფრო ჩრდილოეთ ამერიკაშია ცნობილი, მაგრამ მიმდევრები ჰყავს აგრეთვე ევროპაში, ლათინურ ამერიკაში და ისრაელშიც. (უნდა აღინიშნოს, რომ ვინაიდან ჰუმანისტური იუდაიზმი უარყოფს ზებუნებრივი ღმერთის ცნებას, რასაც სხვა ებრაული მიმდინარეობები იუდაიზმის საფუძვლად მიიჩნევენ, მისი ებრაულ მიმდინარეობად ჩათვლის საკითხი აზრთა უთანხმოებას იწვევს). 
+
+მართლმადიდებელ ებრაელთა უმრავლესობა ადამიანის ებრაელობას საზღვრავს არა იმით, თუ რომელი მიმდინარეობის მიმდევარია იგი, არამედ იმის მიხედვით, თუ რამდენად ახლოსაა მისი ღვთისმსახურების წესები მათ წესებთან. მართლმადიდებელ ებრაელთა აზრით, ებრაელი, რომელიც არ ასრულებს შაბათის, იომ-ტოვების (წმინდა დღეების), ქაშრუთისა და ოჯახური სიწმინდის კანონებს, მორწმუნედ არ უნდა ჩაითვალოს; ნებისმიერ ებრაელს, რომელიც თუნდაც, მხოლოდ ამ კანონებს შეასრულებს, ისინი ღვთის მსახურად და მორწმუნედ ჩათვლიან.         
         
  
          
