--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -99,7 +99,7 @@
    
 *[[ხასიდური იუდაიზმი]] ხარედული იუდაიზმის ერთ-ერთი მნიშვნელოვანი  ჯგუფია. 
 
-2) [[კონსერვატიული იუდაიზმი]], რომელიც აშშ-ს გარეთ მასორეთული (ტრადიციონალისტური) იუდაიზმის სახელითაა ცნობილი, მე-19 საუკუნიდან განვითარდა ევროპასა და შეერთებულ შტატებში; იგი გამოძახილი იყო იმ ცვლილებებისა, რომელიც განათლებამ და ებრაელთა უფლებრივად გათანასწორებამ გამოიწვია. ამ მიმდინარეობისათვის დამახასიათებელი იყო უცვლელი მორჩილება ტრადიციული ჩვეულებებისადმი და კანონებისადმი (შაბათისა და ქაშრუთის დაცვის ჩათვლით), ებრაულ რწმენის პრინციპთა განგებ არაფუნდამენტალისტური სწავლება, თანამედროვე კულტურისადმი დადებითი დამოკიდებულება, ტრადიციული რაბინული სწავლულობის აღიარება თანამედროვე განათლებასთან ერთად და ებრაულ რელიგიურ ტექსტთა კრიტიკულად შესწავლა.
+2) [[კონსერვატიული იუდაიზმი]], რომელიც აშშ-ს გარეთ მასორეთული (ტრადიციონალისტური) იუდაიზმის სახელითაა ცნობილი, მე-19 საუკუნიდან განვითარდა ევროპასა და შეერთებულ შტატებში; იგი გამოძახილი იყო იმ ცვლილებებისა, რომელიც განათლებამ და ებრაელთა უფლებრივად გათანასწორებამ გამოიწვია. ამ მიმდინარეობისათვის დამახასიათებელი იყო უცვლელი მორჩილება ტრადიციული ჩვეულებებისადმი და კანონებისადმი (შაბათისა და ქაშრუთის დაცვის ჩათვლით), ებრაული სარწმუნოების პრინციპთა განგებ არაფუნდამენტალისტური სწავლება, თანამედროვე კულტურისადმი დადებითი დამოკიდებულება, ტრადიციული რაბინული სწავლულობის აღიარება თანამედროვე განათლებასთან ერთად და ებრაულ რელიგიურ ტექსტთა კრიტიკულად შესწავლა.
 
 კონსერვატიული იუდაიზმის მიხედვით ებრაული კანონი უცვლელი არ ყოფილა - იგი ყოველთვის ცვალებად პირობებთან შეგუებით ვითარდებოდა; კონსერვატორი ებრაელების აზრით [[თორა]] ღმერთისაგან შთაგონებულ წინასწარმეტყველთა მიერ დაწერილი საღვთო საბუთია, მაგრამ ისინი უარყოფენ მართლმადიდებლურ შეხედულებას, რომ თორა ღმერთმა მოსეს უკარნახა. კონსერვატიული იუდაიზმი ზეპირ თორასაც საღვთოდ და დამავალებელად მიიჩნევს, მაგრამ უარყოფს მისი კანონების ზოგ მართლმადიდებლურ ინტერპრეტაციას.
 
