*Empty MediaWiki Message*

--- a/ნარინჯისფერი_რევოლუცია.mw
+++ b/ნარინჯისფერი_რევოლუცია.mw
@@ -4,7 +4,7 @@
 
 სახალხო პროტესტს დასაბამი მისცა ადგილობრივ და უცხოელ დამკვირვებლთა ცნობამ საყოველთაო სახალხო აზრთან ერთად იმის შესახებ, რომ [[2004]] წლის [[21 ნეობერი|21 ნოემბერს]] ჩატარებული არჩევნების მეორე ტურში წამყვან კანდიდატებს შორის ([[იუშენკო, ვიქტორ|ვიქტორ იუშენკო]] და [[იანუკოვიჩი, ვიქტორ|ვიქტორ იანუკოვიჩი]]) ხმების რაოდენობა გაყალბებულ იქნა იანუკივიჩის სასარგებლოდ. მეორე ტური ჩატარებულ იქნა უკრაინის საარჩევნო კანონის შესაბამისად, ვინაიდან 2004 წლის 31 ოქტომბერს ჩატარებულ პირველად არჩევნებში ვერც ერთმა კანდიდატმა უმრავლესობის ხმა ვერ მიიღო (50%-ზე მეტი). მეორე ტურის გამარჯვებული უნდა გამხდარიყო უკრაინის მესამე პრეზიდენტი 1991 წელს [[სსრკ|საბჭოთა კავშირის]] დაშლის შედეგად მიღებული დამოუკიდებლობის შემდეგ.
 
-[[ნარინჯისფერი]] არჩეულ იქნა მოწინააღმდეგეთა მოძრაობის ოფიციალურ ფერად, ვინაიდან ეს იყო არჩევნებში ოპოზიციის მთავარი კანდიდატის, ვიქტორ იუშენკოს, ფერი. უკრაინაში იუშენკოს მხარდამჭერთა მოძრაობის სოლიდარობის სიმბოლო იყო ნარინჯისფერი ლენტა ან დროშა მოწოდებით "Так! Ющенко!" ("დიახ! იუშენკო!"). მთავარი მოვლენები [[კიევი|კიევში]] განხორციელდა - რევოლუციის ცენტრი დედაქალაქში იყო ''მაიდანი'' (დამოუკიდებლობის მოედანი), რომლის შემოგარენიც 24-საათიან ტენტის (?ქართულად) ქალაქად გადაიქცა. თუმცა პარალელურად აქციები ტარდებოდა მთელი ქვეყნის მასშტაბით მჯდომარე აქციებით, საპროტესტო გამოსვლებით, გაფიცვებით და ა.შ. რომელიც 21 ნოემბრის არჩევნებს მოჰყვა თან.
+[[ნარინჯისფერი]] არჩეულ იქნა მოწინააღმდეგეთა მოძრაობის ოფიციალურ ფერად, ვინაიდან ეს იყო არჩევნებში ოპოზიციის მთავარი კანდიდატის, ვიქტორ იუშენკოს, ფერი. უკრაინაში იუშენკოს მხარდამჭერთა მოძრაობის სოლიდარობის სიმბოლო იყო ნარინჯისფერი ლენტა ან დროშა მოწოდებით "Так! Ющенко!" ("დიახ! იუშენკო!"). მთავარი მოვლენები [[კიევი|კიევში]] განხორციელდა - რევოლუციის ცენტრი დედაქალაქში იყო ''მაიდანი'' (დამოუკიდებლობის მოედანი), რომლის შემოგარენიც 24-საათიან კარვების ქალაქად გადაიქცა. თუმცა პარალელურად აქციები ტარდებოდა მთელი ქვეყნის მასშტაბით მჯდომარე აქციებით, საპროტესტო გამოსვლებით, გაფიცვებით და ა.შ. რომელიც 21 ნოემბრის არჩევნებს მოჰყვა თან.
 
 ოპოზიციის მოძრაობის ღონისძიებათა მასშტაბურობის წყალობით არჩევნების შედეგები ანულირებულ იქნა და უკრაინის უზენაემა სასამართლო 2004 წლის 26 დეკემბერს მეორე ტურის ხელმეორედ ჩატარებაზე დათანხმდა. ხელმეორე არჩევნებმა ცხადყო იუშენკოს უპირატესობა, რომელმაც ამომრჩეველთა 52% მიიღო მოწინააღმდეგის 44%-თან მიმართებაში. ამგვარად იუშენკო გამარჯვებულად ცნეს და ნარინჯისფერი რევოლუციის დაბოლოება იყო მისი საინაუგურაციო ცერემონია კიევში 2005 წლის 23 იანვარს.
 
