--- a/13_მარტი.mw
+++ b/13_მარტი.mw
@@ -4,8 +4,13 @@
 ==დღის მოვლენები==
 
 *[[1516]] : კარლ ჰაბსბურგი ესპანეთის პირველ მეფედ გამოაცხადეს.
-*[[1781]] : უილიამ ჰერშელმა პლანეტა ურანი აღმოაჩინა.
-
+*[[1781]] : [[ჰერშელი, უილიამ|უილიამ ჰერშელმა]] პლანეტა [[ურანი]] აღმოაჩინა.
+*[[1881]] : [[ალექსანდრე II (რუსეთი)]] მოკლულ იქნა საკუთარ სასხლესთან ნასროლი ნაღმით. ივლიანეს კალენდრით 1 მარტს.
+*[[1921]] : მონღოლეთი ჩინეთისგან დამოუკიდებლობას აცხადებს.
+*[[1943]] : [[ჰოლოკოსტი]] - გერმანული ჯარები ებრაული [[გეტო|გეტოს]] ლიკვიდაციას ახდენენ [[კრაკოვი|კრაკოვში]].
+*[[1992]] : აღმოსავლეთ თურქეთში 6.8 მაგნიტუდის [[მიწისძვრა]] ([[რიხტერის შკალა]]) 500-მდე ადამიანს იწირავს.
+*[[1997]] : ფენიქსში, [[არიზონა]], ერთ-ერთი ყველაზე მასიურად შემჩნეული "უფო" (ამოუცნობი მფრინავე ობიექტები) ანომალია დაფიქსირდა.
+*[[2003]] : [[ადამიანთა ევოლუცია]] - იტალიაში ნაპოვნი იქნა 350.000 წლის წინანდელი ორ ფეხზე მოსიარული ადამიანის ფეხის ანაბეჭდები.
 
 ==ამ დღეს დაბადებულნი==
 
