*Empty MediaWiki Message*

--- a/კრაკოვი.mw
+++ b/კრაკოვი.mw
@@ -18,7 +18,7 @@
 |- bgcolor="#FFFFFF"
 |[[ფართობი]]: || 326,8 კმ²
 |- bgcolor="#FFFFFF"
-|[[მოსახლეობა]]:</br></br></br><small>(2004)</small>|| ქ. კრაკოვი: 757.500</br>&nbsp;&nbsp;<small>აგლომერაცია: 1.200.000</small></br>&nbsp;&nbsp;
+|[[მოსახლეობა]]:</br></br><small>(2004)</small>|| ქ. კრაკოვი: 757.500</br>&nbsp;&nbsp;<small>აგლომერაცია: 1.200.000</small></br>&nbsp;&nbsp;
 |- bgcolor="#FFFFFF"
 |[[სიმჭიდროვე]]: || 2317,93 ად./კმ²
 |- bgcolor="#FFFFFF"
@@ -32,11 +32,54 @@
 |-
 ! colspan="2" align="center" | 
 |- bgcolor="#FFFFFF"
-| align="center" colspan=2 | [[სურათი:Krakau altstadt.jpg|300px|ხელი ძველ ქალაქზე ვაველიდან]]
+| align="center" colspan=2 | [[სურათი:Krakau altstadt.jpg|300px|ხედი ძველ ქალაქზე ვაველიდან]]
 |- bgcolor="#FFFFFF"
-! colspan="2" align="center" | ხელი ძველ ქალაქზე ვაველიდან
+! colspan="2" align="center" | ხედი ძველ ქალაქზე ვაველიდან
 |}
 
-'''კრაკოვი''' (პოლ.Kraków ['krakuf]), სრული სახელი: '''სამეფო დედაქალაქი კრაკოვი''' (პოლ.: Królewskie Stołeczne Miasto Kraków) ერთ-ერთი უძველესი და უდიდესი ქალაქია [[პოლონეთი|პოლონეთში]]; 2004 წლის მონაცემებით მოსახლეობა შეადგენს 760.000 ადამიანს. ისტორიული ქალაქი მდებარეობს მდ. ვისლაზე ვაველის მთის ძირას მალოპოლსკას რეგიონის სამხრეთით. ქალაქი ასევე მალოპოლსკას ვოევოდინის (województwo małopolskie) დედაქალაქია 1999 წლიდან, მანამდე კრაკოვის ვოევოდინის დედაქალაქი იყო მე-14 საუკუნიდან.
+'''კრაკოვი''' (პოლ. Kraków ['krakuf]), სრული სახელი: '''სამეფო დედაქალაქი კრაკოვი''' (პოლ.: Królewskie Stołeczne Miasto Kraków) ერთ-ერთი უძველესი და უდიდესი ქალაქია [[პოლონეთი|პოლონეთში]]; 2004 წლის მონაცემებით მოსახლეობა შეადგენს 760.000 ადამიანს. ისტორიული ქალაქი მდებარეობს მდ. ვისლაზე ვაველის მთის ძირას მალოპოლსკას რეგიონის სამხრეთით. ქალაქი ასევე მალოპოლსკას ვოევოდინის (województwo małopolskie) დედაქალაქია 1999 წლიდან, მანამდე კრაკოვის ვოევოდინის დედაქალაქი იყო მე-14 საუკუნიდან.
 
-კრაკოვი ისტორიულად ქვეყნის წამყვანი სამეცნიერო, კულტურული და ხელოვნების ცენტრი იყო. ერთ დროს პოლონეთის დედაქალაქი დღესაც მრავალთ მიერ მიიჩნება ქვეყნის გულად საკუთარი ათასწლოვანი ისტორიის წყალობით. კრაკოვი ასევე რეგიონისა და საერთაშორისო ტურიზმის ცენტრია, წელიწადში 2 მილიონზე მეტი მნახველით.
+კრაკოვი ისტორიულად ქვეყნის წამყვანი სამეცნიერო, კულტურული და ხელოვნების ცენტრი იყო. ერთ დროს პოლონეთის დედაქალაქი დღესაც მრავალთა მიერ მიიჩნევა ქვეყნის გულად საკუთარი ათასწლოვანი ისტორიის წყალობით. კრაკოვი ასევე რეგიონისა და საერთაშორისო ტურიზმის ცენტრია, წელიწადში 2 მილიონზე მეტი მნახველით.
+
+{{ესკიზი}}
+
+==რესურსები ინტერნეტში==
+* [http://www.krakow.pl/en/ მაგიური კრაკოვი - ქალაქის ოფიციალური ვებგვერდი]
+
+[[კატეგორია:პოლონეთის ქალაქები]]
+
+[[als:Krakau]]
+[[bg:Краков]]
+[[ca:Cracòvia]]
+[[cs:Krakov]]
+[[da:Krakow]]
+[[de:Krakau]]
+[[et:Kraków]]
+[[es:Cracovia]]
+[[eo:Krakovo]]
+[[eu:Krakobia]]
+[[fr:Cracovie]]
+[[is:Kraków]]
+[[it:Cracovia]]
+[[he:קרקוב]]
+[[la:Cracovia]]
+[[lv:Krakova]]
+[[lt:Krokuva]]
+[[hu:Krakkó]]
+[[mo:Краковия]]
+[[na:Krakow]]
+[[nl:Krakau]]
+[[nds:Krakau]]
+[[ja:クラクフ]]
+[[no:Kraków]]
+[[pl:Kraków]]
+[[pt:Cracóvia]]
+[[ro:Cracovia]]
+[[ru:Краков]]
+[[sk:Krakov]]
+[[sl:Kraków]]
+[[sr:Краков]]
+[[fi:Krakova]]
+[[sv:Kraków]]
+[[uk:Краків]]
+[[zh:克拉科夫]]
