--- a/არტ-ნუვო.mw
+++ b/არტ-ნუვო.mw
@@ -4,6 +4,15 @@
 რუსეთში ეს მიმდინარეობა სამხატვრო ჟურნალი "ხელოვნების სამყარო" ირგვლივ ტრიალებდა, რომელმაც რევოლუციური "ბალეტ-რუსე" (Ballets Russes) წარმოშვა. იტალიაში "სტილ-ლიბერტი" მიმდინარეობას საფუძველი ჩაუყარა ლონდონურმა მაღაზიამ "Liberty & Co", რომელიც თანამედროვე დიზაინს ავრცელებდა კომერციულ ასპექტში გამოსახული ხელოვნების ნიმუშებით. [[კატალონია|კატალონიაში]], მიმდინარეობა სახელით "მოდერნიზმო" [[ბარსელონა|ბარსელონაში]] ვითარდებოდა და მისი ყველაზე ცნობილი პრაქტიკოსი ანტონი გაუდი გახლდათ.
 
 ==არტ-ნუვოს კარიერა==
+[[სურათი:MackmurdoWren1883.gif|thumb|left|ართურ მაკმურდოს წიგნის გარეკანი, 1883]]
+მიუხედავად იმისა, რომ არტ-ნუვომ კლიმაქსი 1892-1902 წლებში განიცადა, მისი პირველი ნიშნები უკვე 1880-იან წლებში შეიმჩნეოდა "არტს-ენდ-კრაფტს" (Arts and Crafts) მიმდინარეობის პროგრესულ დიზაინერულ ნიმუშებში, როგორიცაა არქიტექტორ-დიზაინერ ართურ მაკმურდოს 1883 წელს გამოქვეყნებული წიგნის გარეკანის დიზაინი ნარკვევისთვის სერ ქრისტოფერ ვრენის ქალაქურ ეკლესიებზე. ამავე პერიოდის ზოგიერთი თავისუფალი მოტივის ჭედური ლითონის ნამუშევრები და ბრტყელი ყვავილოვანი ტექსტილის დიზაინერული ნიმუშებიც შეიძლება მიკუთვნებულ იქნას პროგრესულ მიმდინარეობაზე, თუმცა მათი უმრავლესობა ასევე მაღალი ვიქტორიანული მცენარეული ჩუქურთმის გავლენაც უნდა იყოს.
+
+სახელწოდება "არტ-ნუვო" მომდინარეობს ავავე სახელის მაღაზიისგან პარიზში, "Maison de l'Art Nouveau", იმ დროისთვის სემუელ ბინის განკარგულებაში, სადაც გასაყიდად გამოფენილი იყო სხვადასხვა ნივთები, რომლებიც ამ განსაკუთრებული დიზაინში იყო შესრულებული.
+
+არტ-ნუვოს ევოლუციამ კულმინაციას მიაღწია 1900 წელს პარიზში გამართულ უნივერსალურ მსოფლიო ექსპოზიციაზე, რომელშიც სტილი "მოდერნი" ტრიუმფს განიცდის ყველა ფორმასა და მედიუმში. მიმდინარეობამ სავარაუდოდ აპოგეას მიაღწია 1902 წლის [[ტურინი|ტურინის]] ექსპოზიციაზე იტალიაში, სადაც დიზაინერები თითქმის ყველა ევროპული ქვეყნიდან საკუთარ ნიმუშებს ექსკლუზიურად არტ-ნუვო სტილში წარადგენენ. არტ-ნუვო იყენებდა გვიანდელი მე-19 საუკუნის თითქმის ყველა ტექნოლოგიურ ინოვაციას, როგორიცაა გაშიშვლებული ლითონი და ვრცელი უსწორმასწორო ფორმის მინა არქიტექტურაში, თუმცა პირველი მსოფლიო ომის დაწყებისთვის არტ-ნუვოს ზედმიწევნით სტილიზებული დიზაინი, რომელიც თავისთავად საკმაოდ ძვირი ჯდებოდა, შეცვალა უფრო სწორხაზოვანმა, მართკუთხა მოდერნიზმმა, რომელიც უფრო იაფი და, როგორც მიიჩნევდნენ, უფრო აესთეტიური იყო წმინდა ინდუსტრიული თვალსაზრისით.
+
+პარიზის მეტროს შესასვლელები ჰექტორ გიმარდის დიზაინით 1899 და 1900 წლებში არტ-ნუვო მიმდინარეობის განსაკუთრებით აღსანიშნავი და განთქმული ნიმუშებია.
+
 ==არტ-ნუვოს ხასიათი==
 ==არტ-ნუვო მედია==
 ==გეოგრაფიული არეალი==
