*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ნ.mw
+++ b/ცნობილი_ქართველები:_ნ.mw
@@ -80,15 +80,15 @@
 * [[ნიკოლაძე, იაკობ]] - მოქანდაკე
 * [[ნიკოლაძე, ნიკო]] - პუბლიცისტი, კრიტიკოსი, რევოლუციონერ-დემოკრატი
 * [[ნიკოლაძე, რუსუდან]] - ქიმიკოსი
-* [[ნიკოლოზ I გულაბერისძე| ნიკოლოზ I ]] - საქართველოს კათალიკოსი
-* [[ნიკოლოზ II ]]  - საქართველოს კათალიკოს-პატრიარქი
-* [[ნიკოლოზ III ]] - საქართველოს კათალიკოს-პატრიარქი
-* [[ნიკოლოზ IV ]] - საქართველოს კათალიკოს-პატრიარქი
-* [[ნიკოლოზ V ]] - აღმოსავლეთ საქართველოს კათალიკოს-პატრიარქი
-* [[ნიკოლოზ VI ]] - აღმოსავლეთ საქართველოს კათალიკოს-პატრიარქი
-* [[ნიკოლოზ VII ]] - აღმოსავლეთ საქართველოს კათალიკოს-პატრიარქი
-* [[ნიკოლოზ VIII ]] - აღმოსავლეთ საქართველოს კათალიკოს-პატრიარქი
-* [[ნიკოლოზ IX ]] - აღმოსავლეთ საქართველოს კათალიკოს-პატრიარქი
+* [[ნიკოლოზ I გულაბერისძე| ნიკოლოზ I ]] - საქართველოს კათოლიკოსი
+* [[ნიკოლოზ II ]]  - საქართველოს კათოლიკოს-პატრიარქი
+* [[ნიკოლოზ III ]] - საქართველოს კათოლიკოს-პატრიარქი
+* [[ნიკოლოზ IV ]] - საქართველოს კათოლიკოს-პატრიარქი
+* [[ნიკოლოზ V ]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
+* [[ნიკოლოზ VI ]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
+* [[ნიკოლოზ VII ]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
+* [[ნიკოლოზ VIII ]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
+* [[ნიკოლოზ IX ]] - აღმოსავლეთ საქართველოს კათალოკოს-პატრიარქი
 * [[ნიკოლოზ თბილელი]] - სახელმწიფო და სასულიერო მოღვაწე
 * [[ნიკოლოზი]] - დასავლეთ საქართველოს (აფხაზეთის) კათალიკოსი
 * [[ნიკოლოზ კატარაწისძე]] - კალიგრაფი
