*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ნ.mw
+++ b/ცნობილი_ქართველები:_ნ.mw
@@ -90,7 +90,7 @@
 * [[ნიკოლოზ VIII ]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[ნიკოლოზ IX ]] - აღმოსავლეთ საქართველოს კათალოკოს-პატრიარქი
 * [[ნიკოლოზ თბილელი]] - სახელმწიფო და სასულიერო მოღვაწე
-* [[ნიკოლოზი]] - დასავლეთ საქართველოს (აფხაზეთის) კათალიკოსი
+* [[ნიკოლოზი (XIII ს.)]] - დასავლეთ საქართველოს (აფხაზეთის) კათოლიკოსი
 * [[ნიკოლოზ კატარაწისძე]] - კალიგრაფი
 * [[ნიკოლოზ რუსთველი]] - საეკლესიო მოღვაწე
 * [[ნიკრაი]] - კალიგრაფი
